--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#BEBEBE</color>
     <color name="colorGreen">#E8E8E8</color>
+    <color name="colorBlack">#000000</color>
 </resources>
