--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -11,6 +11,10 @@
         android:alpha=".7"
         android:background="@color/colorPrimary" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,4 +93,5 @@
 
         </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 </FrameLayout>
