--- a/app/src/main/res/layout-v23/activity_add.xml
+++ b/app/src/main/res/layout-v23/activity_add.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddActivity">
+    tools:context=".activitys.AddActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,6 +20,15 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="vertical"
@@ -101,6 +110,8 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
+    </LinearLayout>
+    </ScrollView>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
