--- a/app/src/main/res/layout/loading_custom.xml
+++ b/app/src/main/res/layout/loading_custom.xml
@@ -44,6 +44,7 @@
             android:id="@+id/ll_ok_reject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             android:layout_weight="1"
             android:gravity="center">
 
