--- a/app/src/main/res/layout/dialog_excluir.xml
+++ b/app/src/main/res/layout/dialog_excluir.xml
@@ -26,24 +26,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
-            android:text="DESEJA EXCLUIR?"
+            android:text="@string/deseja_excluir"
             android:textColor="@color/colorWhite"
-            android:textSize="16dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/colorGrey" />
 
         <LinearLayout
             android:id="@+id/ll_ok_reject"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:layout_marginTop="10dp"
             android:gravity="center">
 
             <Button
@@ -52,7 +53,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="Não" />
+                android:background="@drawable/btn_gradient_white"
+                android:text="@string/nao"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <Button
                 android:id="@+id/btn_del_sim"
@@ -60,7 +65,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="Sim" />
+                android:background="@drawable/btn_gradient_white"
+                android:text="@string/sim"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
     </LinearLayout>
