--- a/app/src/main/res/layout/loading_custom.xml
+++ b/app/src/main/res/layout/loading_custom.xml
@@ -28,9 +28,9 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
-            android:text="Carregando..."
+            android:text="@string/carregando"
             android:textColor="@color/colorWhite"
-            android:textSize="16dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
 
@@ -43,7 +43,7 @@
         <LinearLayout
             android:id="@+id/ll_ok_reject"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
             android:gravity="center">
@@ -51,7 +51,7 @@
             <com.github.ybq.android.spinkit.SpinKitView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/spin_kit"
-                style="@style/SpinKitView.Large.DoubleBounce"
+                style="@style/SpinKitView.Large.Wave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
